--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 </head>
 <body>
     <div class="game">
-        <div class="header"><h2>MineSweeper</h2></h1></div>
+        <div class="header">
+            <h1>MineSweeper</h1>
+            <div class="menu">
+                <select id="level" >
+                    <option value="10">Easy</option >
+                    <option value="40">Medium</option>
+                    <option value="100">Hard</option>
+                </select>
+                <button id="reset">Reset</button>   
+            </div>
+        </div>
+            
         <div class="body">
             
         </div>
